[tool.poetry]
name = "qosst-core"
version = "0.10.1"
description = "Core submodule of QOSST, containing modules for configuration, control protocol, authentication, modulation and communication filters."
authors = [
    "Yoann Piétri <Yoann.Pietri@lip6.fr>",
    "Ilektra Karakosta-Amarantidou <ilektra.karakostaamarantidou@studenti.unipd.it>",
]
include = ["qosst_core/configuration/config.example.toml"]
packages = [{ include = "qosst_core" }, { include = "qosst_core/py.typed" }]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/qosst"
repository = "https://github.com/qosst/qosst-core"
documentation = "https://qosst-core.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.22.3"
scipy = "^1.8.0"
qosst-hal = "^0.10.0"
falcon-digital-signature = "^0.9.2"
toml = "^0.10.2"
requests = "^2.27.1"
importlib-metadata = { version = "*", python = "<3.8" }

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.0.0"
docstr-coverage = "^2.2.0"
myst-parser = "^1.0.0"
sphinx-prompt = "^1.5.0"
sphinx-argparse-cli = "^1.11.0"
sphinxcontrib-programoutput = "^0.17"
matplotlib = "^3.5.1"
setuptools = "^67.6.1"
mypy = "^1.3.0"
pylint = "^2.17.4"
black = "^23.9.1"

[tool.poetry.scripts]
qosst = "qosst_core.commands:main"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
